--- a/style/style.css
+++ b/style/style.css
@@ -1,93 +1,28 @@
-body, html{
-  height:100%;
-  margin:0;
-  font-size:16px;
-  font-family:'Poppins', sans-serif;
-  font-weight:400;
-  line-height:1.8em;
-  color:#666;
+body {
+    background: #051435;
+    text-align: center;
 }
 
-.pimg1, .pimg2, .pimg3{
-  position:relative;
-  opacity:0.70;
-  background-position:center;
-  background-size:cover;
-  background-repeat:no-repeat;
-
-  /*
-    fixed = parallax
-    scroll = normal
-  */
-  background-attachment:fixed;
+h1 {
+    margin: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    color: rgb(28, 113, 125);
+    font-size: 3em;
 }
 
-.pimg1{
-  background-image:url('E:/Shivani_Varu_190423116010_mp1/images/p1.png');
-  min-height:100%;
+button {
+    margin: 40px 5px auto;
+    text-align: center;
+    color: #1da345;
+    background: #696969;
+    border: solid 2px #808080;
+    border-radius: 5px;
+    padding: 16px 42px 16px;
+    letter-spacing: 2px;
+    cursor: pointer;
 }
 
-.pimg2{
-  background-image:url('E:/Shivani_Varu_190423116010_mp1/images/dome.jpg');
-  min-height:400px;
-}
-
-.pimg3{
-  background-image:url('E:/Shivani_Varu_190423116010_mp1/images/india2.jpg');
-  min-height:400px;
-}
-
-.section{
-  text-align:center;
-  padding:50px 80px;
-}
-
-
-.section-light{
-  background-color:#722f3bde;
-  color:rgba(235, 204, 212, 0.52);
-}
-.section-dark{
-  background-color:#554247;
-  color:#a88590;
-}
-
-.ptext{
-
-  position:absolute;
-  top:50%;
-  width:100%;
-  text-align:center;
-  color:#000;
-  font-size:30px;
-  letter-spacing:8px;
-  text-transform:uppercase;
-}
-
-.ptext .border{
-  background-color:rgba(14, 12, 17, 0.904);
-  color:white;
-  padding:20px;
-}
-
-.ptext .border.trans{
-  
-  font-size: 20px;
-  font-family: cursive;
-  font-style: oblique;
-  background-color:rgba(82, 19, 39, 0);
-  color:rgba(253, 251, 253, 0.685);
-}
-.service-title {
-  font-family:'Times New Roman', Times, serif;
-  color: #F37b83;
-}
-.service-head {
-font-family:'Times New Roman', Times, serif;
-  color:#ffc5ddc5;
-}
-@media(max-width:568px){
-  .pimg1, .pimg2, .pimg3{
-    background-attachment:scroll;
-  }
+#text_area {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
